2000-10-20  OKUJI Yoshinori  <okuji@gnu.org>

	APM BIOS table support is added, based on a patch by Matt Yourst
	<yourst@mit.edu>.
	
	* docs/multiboot.texi (Boot information format): Added the
	definition of APM table format.
	
	* stage2/mb_info.h (apm_info): New structure.
	(multiboot_info): Added a new element, apm_table.
	(MB_INFO_APM_TABLE): New macro.
	* stage2/asm.S (apm_bios_info): New variable.
	Include "apm.S".
	* stage2/apm.S: New file.
	* stage2/common.c (init_bios_info) [!STAGE1_5]: Added APM BIOS
	table support.
	* stage2/shared.h (apm_bios_info): Declared.
	(get_apm_info): Likewise.
	* stage2/Makefile.am (EXTRA_DIST): Added apm.S.
	* grub/asmstub.c (apm_bios_info): New variable.
	(get_apm_info): New function.
	
2000-10-19  OKUJI Yoshinori  <okuji@gnu.org>

	Segregate functions which are copyrighted differently.
	
	* stage2/setjmp.S: New file.
	* stage2/Makefile.am (EXTRA_DIST): Added setjmp.S.
	* stage2/asm.S: Include "setjmp.S".
	(grub_setjmp): Moved to ...
	* stage2/setjmp.S (grub_setjmp): ... here.
	* stage2/asm.S (grub_longjmp): Moved to ...
	* stage2/setjmp.S (grub_longjmp): ... here.
	
2000-10-18  OKUJI Yoshinori  <okuji@gnu.org>

	* stage2/Makefile.am (noinst_HEADERS): Added md5.h. Reported by
	Volker Augustin <Volker.Augustin@stud.uni-regensburg.de>.
	
2000-10-17  OKUJI Yoshinori  <okuji@gnu.org>

	* configure.in (--disable-md5password): Renamed to ...
	(--disable-md5-password): ... this. Just for my preference.
	
2000-10-17  Jochen Hoenicke  <jochen@gnu.org>

	Added MD5 passwords and extended password command:
	
	* configure.in (--disable-md5password): New option.
	* stage2/Makefile.am (libgrub_a_SOURCES): Added md5.c.
	(pre_stage2_exec_SOURCES): Likewise.
	* stage2/md5.c: New file.
	* stage2/shared.h (password_t): New type.
	(password_type): New variable.
	(BUILTIN_HIDDEN): New flag, describing that a command should not
	be printed when booting the entry.
	(check_password): New function.